--- a/academy/templates/academy/post_list.html
+++ b/academy/templates/academy/post_list.html
@@ -1,17 +1,13 @@
-<html>
-    <head>
-        <title>Gestión Académica</title>
-    </head>
-<body>
-    <div>
-	<h1><a href = "/"> Django Prueba </a></h1>
-    </div>
-    {% for post in posts %} 
-    	<div>
-		<p> Creado: {{ post.created_date }} </p>
-		<h1><a href = "" > {{ post.title }} </a></h1>
-		<p>{{ post.text|linebreaksbr }} </p>
-    	</div>
-    {% endfor %}
-</body>
-</html>
+{% extends 'academy/base.html' %}
+{% block content %}
+	{% for post in posts %}
+	<div class="post">
+	    <div class="date">
+		<p>Created: {{ post.created_date }}</p>
+	    </div>
+	    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+	    <p>{{ post.text|linebreaksbr }}</p>
+	</div>
+	{% endfor %}
+{% endblock %}
+
